<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        // Schema::create('inventario_sucursal_lotes', function (Blueprint $table) {
        //     $table->id();

        //     $table->foreignId('sucursal_id')->constrained('sucursales')->onDelete('cascade');
        //     $table->foreignId('lote_id')->constrained('lotes')->onDelete('cascade');
        //     $table->integer('cantidad_en_sucursal');

        //     $table->timestamps();
        // });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        // Schema::dropIfExists('inventario_sucursal_lotes');
    }
};
